app-apache/apache-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
  labels:
    app: apache
spec:
  replicas: 4  # จำนวน replicas ของ Apache (สามารถปรับเปลี่ยนได้ตามต้องการ)
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd:2.4  # Image ของ Apache HTTP Server
          ports:
            - containerPort: 80  # เปิดพอร์ต 80 สำหรับการเข้าถึง HTTP
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
